pilot/pkg/proxy/envoy/v2/config.conf.20129.yaml
{
  "node": {
    "id": "sidecar~10.2.0.1~app3-644fc65469-96dza.testns~testns.svc.cluster.local",
    "cluster": "mycluster",
    "locality": {
      "zone": "testzone"
    },
    "metadata": {
      "BASE": "/Users/pivotal/go/src/code.cloudfoundry.org/istio-release/src/istio.io/istio/tests/testdata/local"
    }
  },
  "stats_config": {
    "use_all_default_tags": false
  },
  "admin": {
    "access_log_path": "/tmp/envoy-access.log",
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 20129
      }
    }
  },
  "dynamic_resources": {
    "lds_config": {
      "ads": {}
     },
    "cds_config": {
      "ads": {}
    },
    "ads_config": {
      "api_type": "GRPC",
      "grpc_services": {
        "envoy_grpc": {
          "cluster_name": "xds-grpc"
        }
      },
      "refresh_delay": {
        "seconds": 30,
        "nanos": 0
      }
    }
  },
  "static_resources": {
    "listeners": [
    {
    "name": "http_0.0.0.0_20127",
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 20127
      }
    },
    "filter_chains": [
      {
        "filters": [
          {
            "name": "envoy.http_connection_manager",
            "config": {
              "stat_prefix": "http",
              "route_config": {
                  "name": "default",
                  "virtual_hosts": [
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "service1"
                            }
                          }
                        ]
                      }

                  ]
               },
               "http_filters": [
              {
              "name": "envoy.cors"
              },
              {
              "name": "envoy.router"
              }
              ]
            }
          }
        ]
      }
    ]
  },
    {
    "name": "http_0.0.0.0_20126",
    "address": {
      "socket_address": {
        "address": "0.0.0.0",
        "port_value": 20126
      }
    },
    "filter_chains": [
      {
        "filters": [
          {
            "name": "envoy.http_connection_manager",
            "config": {
              "stat_prefix": "http",
              "route_config": {
                  "name": "default",
                  "virtual_hosts": [
                      {
                        "name": "backend",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/"
                            },
                            "route": {
                              "cluster": "service2"
                            }
                          }
                        ]
                      }

                  ]
               },
               "http_filters": [
              {
              "name": "envoy.cors"
              },
              {
              "name": "envoy.router"
              }
              ]


            }
          }
        ]
      }
    ]
  },
    {
        "name": "mixertcpproxy",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 20128
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "mixertcpproxy",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "service1"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      },
      {
        "name": "http_proxy_80",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17002
          }
         },

          "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "http_proxy",
                  "http_filters": [
                    {"name": "envoy.router"
                    }
                  ],
                  "rds": {
                      "route_config_name": "80",
                       "config_source": {"ads": {}}
                  },
                  "http_protocol_options": {
                    "allow_absolute_url": true
                  },
             "access_log": [
                {
                  "name": "envoy.file_access_log",
                  "config": {
                      "path":  "/tmp/envoy-access.log"
                   }
                }
              ]

                }
              }
            ]
          }
        ]
      },
      {
        "name": "http_proxy_all",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17003
          }
         },

          "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.http_connection_manager",
                "config": {
                  "codec_type": "AUTO",
                  "stat_prefix": "http_proxy",
                  "http_filters": [
                    {"name": "envoy.router"
                    }
                  ],
                  "rds": {
                      "route_config_name": "http_proxy",
                       "config_source": {"ads": {}}
                  },
                  "http_protocol_options": {
                    "allow_absolute_url": true
                  },
             "access_log": [
                {
                  "name": "envoy.file_access_log",
                  "config": {
                      "path":  "/tmp/envoy-access.log"
                   }
                }
              ]

                }
              }
            ]
          }
        ]
      },
      {
        "name": "grpc15011",
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 17011
          }
        },
        "filter_chains": [
          {
            "tls_context": {
              "common_tls_context": {
                "tls_certificates": [
                  {
                    "certificate_chain": {
                      "inline_string": "-----BEGIN CERTIFICATE-----\nMIIDTzCCAjegAwIBAgIQZX1drhMeXBTU+dhaKckP5TANBgkqhkiG9w0BAQsFADBZ\nMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTESMBAGA1UEBxMJU3Vu\nbnl2YWxlMQ4wDAYDVQQKEwVJc3RpbzERMA8GA1UEAxMISXN0aW8gQ0EwHhcNMTgw\nMzEwMDUwMDE2WhcNMTkwMzEwMDUwMDE2WjATMREwDwYDVQQKEwhKdWp1IG9yZzCC\nASIwDQYJKoZIhvcNAQEBBQADggEPADCCAQoCggEBAMIuHhv/cBdge+gH0VXJDgCF\n7NE8byK/0DlrWn5leewWBFDF7PsVOcEzXUd7qsGKcJ8qrK4o2Qy+myL8TEFjL/8c\nfCimVCcjxNa1nc0A+oA9fQBS8AHhKS1aCbQ [...]
                    },
                    "private_key": {
                      "inline_string": "-----BEGIN RSA PRIVATE KEY-----\nMIIEowIBAAKCAQEAwi4eG/9wF2B76AfRVckOAIXs0TxvIr/QOWtafmV57BYEUMXs\n+xU5wTNdR3uqwYpwnyqsrijZDL6bIvxMQWMv/xx8KKZUJyPE1rWdzQD6gD19AFLw\nAeEpLVoJtAkiGmShgqp4uU/6pcOEZTxH8Sxg8oz+huKy3hufoxMg+xUM7h5vVsYt\n0KlKzAWmkW9PRifoifQIf+ysKqkkF3ZWnsjkqEPrkxId8TbvNxvd+IY0iDNfviLN\nl4HH0lG4a9NjePtXKMDidx+d4bWbsPCuI218VarjwdaiVdxBU7Y7SzZPMqQO3Fne\nk1S+aJ0wrlqv9D/soeXtsRAyFWOliJmhZMBBywIDAQABAoIBAF5znEW2HEnirqKQ\nmuyFXYA3pJeqM8zNTHWBmIT+yy1hEDx [...]
                    }
                  }
                ],
                "validation_context": {
                  "trusted_ca": {
                    "filename": "/Users/pivotal/go/src/code.cloudfoundry.org/istio-release/src/istio.io/istio/security/samples/plugin_ca_certs/cert-chain.pem"
                  }
                }
              },
              "require_client_certificate": true
            },
            "filters": [
              {
                "name": "envoy.tcp_proxy",
                "config": {
                  "deprecated_v1": true,
                  "value": {
                    "stat_prefix": "grpc15011",
                    "route_config": {
                      "routes": [
                        {
                          "cluster": "xds_grpc"
                        }
                      ]
                    }
                  }
                }
              }
            ]
          }
        ]
      }

    ],
    "clusters": [
      {
        "name": "xds-grpc",
        "type": "STRICT_DNS",
        "connect_timeout": {
          "seconds": 5,
          "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 58082
            }
          }
        ],
        "http2_protocol_options": {}
      },
      {
      "name": "service1",
      "type": "STRICT_DNS",
      "connect_timeout": {
        "seconds": 5,
        "nanos": 0
      },
      "lb_policy": "ROUND_ROBIN",
      "hosts": [
      {
        "socket_address": {
        "address": "127.0.0.1",
        "port_value": 20131
        }
        }
      ],
      "http2_protocol_options": {}
      },
      {
      "name": "service2",
      "type": "STRICT_DNS",
      "connect_timeout": {
        "seconds": 5,
        "nanos": 0
      },
      "lb_policy": "ROUND_ROBIN",
      "hosts": [
      {
        "socket_address": {
        "address": "127.0.0.1",
        "port_value": 20127
        }
      }
      ],
      "http2_protocol_options": {}
      },
      {
        "name": "mixer_server",
        "type": "STRICT_DNS",
        "connect_timeout": {
        "seconds": 5,
        "nanos": 0
        },
        "lb_policy": "ROUND_ROBIN",
        "hosts": [
        {
          "socket_address": {
          "address": "127.0.0.1",
          "port_value": 20130
        }
        }
        ],
        "http2_protocol_options": {}
      }

    ]
  }
}
